# extrinsic_calib

./: CMakeLists.txt  LICENSE  README.md
data/: config.ini
include/: Calibration.hpp  ObservationPair.hpp  Parameters.hpp  Plane.hpp  PlaneMatching.hpp  RawlogHelper.hpp  Segmentation.hpp  auxiliar.h
src/: Calibration.cpp  PlaneMatching.cpp  RawlogHelper.cpp  Segmentation.cpp  main.cpp
